k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: autenticacion-ap
spec:
  selector:
    matchLabels:
      app: angular-app
  replicas: 1
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-app
          image: localhost:5000/despliegueangular
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-app
  namespace: autenticacion-ap
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
