k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-app
  namespace: autenticacion-ap
spec:
  ingressClassName: public
  rules:
    - host: devherramientassdde.desarrolloeconomico.gov.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app
                port:
                  number: 80
